# markov-rhyming-poems

./: README.md  main.py  pyproject.toml
corpuses/: LICENSE  README.md  john_keats_corpus.txt  william_blake_corpus.txt  william_wordsworth_corpus.txt
