[tool.poetry]
name = "markov_poem"
version = "0.1.1"
description = "A rhyming poem generator using markov chains"
authors = ["wookie184 <wookie1840@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
